# micromedia

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: build-libmpv.md
src/: app.rs  config.rs  db.rs  graphics.rs  main.rs  media.rs  mpv.rs  paths.rs  player.rs  scanner.rs  thumbnail.rs  tree.rs  videothumb.rs  workers.rs
src/ui/: gallery.rs  mod.rs  sidebar.rs  tag_editor.rs  viewer.rs
ui/: main.slint
