[package]
name = "micromedia"
version = "0.1.0"
edition = "2021"

[features]
default = []
wayland = ["eframe/wayland", "eframe/glow"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "glow", "persistence", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
log = "0.4"
env_logger = "0.11"
libloading = "0.8"
