[package]
name = "micromedia"
version = "0.2.0"
edition = "2021"

[dependencies]
# GL/femtovg-бэкенд обязателен: на нём в Milestone B будем рисовать mpv render API
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "backend-winit",
    "renderer-femtovg",
] }
libloading = "0.8"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
slint-build = "1"

[profile.release]
opt-level = 2
